<resources>
    <string name="app_name">Pick The Show</string>
    <string name="title">title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie">Movie</string>
    <string name="tv_series">TV Series</string>
    <string name="ini_detail_film">ini detil film</string>
    <string name="genre">Genre</string>
    <string name="popularity">Popularity</string>
    <string name="rating">Rating</string>
    <string name="text_view">TextView</string>
    <string name="synopsis">Synopsis</string>
    <string name="poster_film">Poster Film</string>
    <string name="change_language">Change Language</string>
    <string name="pick_the_show" translatable="false">PICK THE SHOW</string>
    <string name="release_year">Release Year</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="favorite_series">Favorite TV</string>
    <string name="search">search</string>
    <string name="search_hint">Search Here</string>
    <string name="appwidget_text">MOVIE FAVORITE</string>
    <string name="empty_text">EMPTY DATA</string>
    <string name="content_text">Chack Your Favorite Show On The App</string>
    <string name="subtext">All Your Favorite Show On One Single App</string>
    <string name="remainder_on">Remainder ON</string>
    <string name="remainder_off">Remainder OFF</string>


</resources>
